Improve route segments (#171)
