# pkg/model/route_segment_matching.go
@@ -16,21 +16,25 @@ const MaxTotalDistanceFraction = 0.9
 
 // RouteSegmentMatch is a match between a route segment and a workout
 type RouteSegmentMatch struct {
+	ID           uint64        `gorm:"primaryKey;autoIncrement" json:"id"`
 	Workout      *Workout      `json:"workout"`
 	RouteSegment *RouteSegment `json:"routeSegment"`
 
 	first, last WorkoutRecord // The first and last point of the route
 	end         WorkoutRecord // The last point of the workout
 
-	RouteSegmentID uint64        `gorm:"primaryKey" json:"routeSegmentID"` // The ID of the route segment
-	WorkoutID      uint64        `gorm:"primaryKey" json:"workoutID"`      // The ID of the workout
-	FirstID        int           `json:"firstID"`                          // The index of the first point of the route
-	LastID         int           `json:"lastID"`                           // The index of the last point of the route
-	Distance       float64       `json:"distance"`                         // The total distance of the route segment for this workout
-	Duration       time.Duration `json:"duration"`                         // The total duration of the route segment for this workout
+	RouteSegmentID uint64        `gorm:"not null;index" json:"routeSegmentID"` // The ID of the route segment
+	WorkoutID      uint64        `gorm:"not null;index" json:"workoutID"`      // The ID of the workout
+	FirstID        int           `json:"firstID"`                              // The index of the first point of the route
+	LastID         int           `json:"lastID"`                               // The index of the last point of the route
+	Distance       float64       `json:"distance"`                             // The total distance of the route segment for this workout
+	Duration       time.Duration `json:"duration"`                             // The total duration of the route segment for this workout
 }
 
 func (rsm *RouteSegmentMatch) AverageSpeed() float64 {
+	if rsm.Duration.Seconds() == 0 {
+		return 0
+	}
 	return rsm.Distance / rsm.Duration.Seconds()
 }
 
